New unit tests. Adjusted logic for application.properties and for correct service logic